<resources>
    <string name="app_name">LoginNavigate</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="enter_email">Ingrese su correo</string>
    <string name="enter_password">Ingrese su contraseña</string>
    <string name="login">Ingresar</string>
    <string name="navigate">Navegar</string>
    <string name="enter_url">Ingrese URL</string>
    <string name="key">Clave</string>
    <string name="value">Valor</string>
    <string name="search">Buscar</string>
    <string name="save">Guardar</string>
    <string name="enter_search">Ingresar clave a buscar</string>
</resources>